<resources>
    <string name="app_name">Laptop Care</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="analytics">Analytics</string>
    <string name="care">Care</string>
    <string name="history">History</string>
    <string name="profile">Profile</string>
    <string name="deskripsi_konten_di_dalam_scrollview">Deskripsi konten di dalam ScrollView</string>
    <string name="connection_info">Connection Info :</string>
    <string name="save">Save</string>
    <string name="system_info">System Info :</string>
    <string name="network_info">Network Info :</string>
    <string name="baterai_healt">Baterai Healt :</string>
    <string name="baterai_info">Baterai Info :</string>
    <string name="disk_usage">Disk Usage :</string>
    <string name="memory_usage">Memory Usage :</string>
    <string name="cpu_usage">Cpu Usage :</string>
    <string name="masukkan_ip_laptop">Masukkan IP Laptop</string>
    <string name="todo">TODO</string>
    <string name="masuk">Masuk</string>
    <string name="masukkan_username">Masukkan Username :</string>
    <string name="username">Username</string>
    <string name="masukkan_password">Masukkan Password :</string>
    <string name="password">Password</string>
    <string name="belum_punya_akun">Belum Punya Akun.?</string>
    <string name="daftar">Daftar</string>
    <string name="masukkan_nama">Masukkan Nama :</string>
    <string name="nama">Nama</string>
    <string name="masukkan_email">Masukkan Email :</string>
    <string name="email">Email</string>
    <string name="masukkan_kembali_password">Masukkan Kembali Password :</string>
    <string name="sudah_punya_akun">Sudah Punya Akun.?</string>
    <string name="hallo">Hallo, </string>
    <string name="about_app">About App</string>
    <string name="more">More</string>
    <string name="further_secure_your_account_for_safety">Further secure your account for safety</string>
    <string name="log_out">Log Out</string>
    <string name="make_changes_to_your_laptop_information">Make changes to your laptop information</string>
    <string name="my_laptop">My Laptop</string>
    <string name="make_changes_to_your_account">Make changes to your account</string>
    <string name="my_account">My Account</string>
    <string name="masukkan_nama_baru">Masukkan Nama Baru</string>
    <string name="masukkan_email_baru">Masukkan Email Baru</string>
    <string name="update">Update</string>
    <string name="merk_laptop">Merk Laptop</string>
    <string name="type_laptop">Type Laptop</string>
    <string name="laptop_name">Laptop Name</string>
    <string name="cek_disetting_atau_dianalisis">cek disetting atau dianalisis</string>
    <string name="sistem_operasi">Sistem Operasi</string>
    <string name="ex_windows_macos_linux">Ex. Windows, MacOS, Linux</string>
    <string name="processor">Processor</string>
    <string name="ex_intel_amd_dll">Ex. Intel, AMD, Dll</string>
    <string name="terdapat_dibawah_laptop">Terdapat dibawah laptop</string>
    <string name="tim_pengembang">Tim Pengembang</string>
    <string name="AboutAppKataKata">LaptopCare hadir dengan tujuan memastikan bahwa laptop Anda selalu dalam kondisi optimal. Dengan fokus pada perawatan, analisis, dan peningkatan kinerja, aplikasi ini bertujuan untuk menjadi teman setia Anda dalam menjaga kesehatan perangkat.</string>
    <string name="mikola_dalifa">Mikola Dalifa</string>
    <string name="_21076101">21076101</string>
    <string name="pendidikan_teknik_informatika">Pendidikan Teknik Informatika</string>
    <string name="versi_aplikasi">Versi Aplikasi</string>
    <string name="v1_0_0">V1.0.0</string>
    <string name="informasi_laptop">Informasi Laptop</string>
    <string name="deskripsi_informasi_laptop">Deskripsi Informasi Laptop</string>
    <string name="cara_perawatan_laptop">Cara Perawatan Laptop</string>
    <string name="deskripsi_cara_perawatan_laptop">Deskripsi Cara Perawatan Laptop</string>
    <string name="informasi_care">Informasi Care</string>
    <string name="deskripsi_informasi_care">Deskripsi Informasi Care</string>
    <string name="informasi_history">Informasi History</string>
    <string name="deskripsi_informasi_history">Deskripsi Informasi History</string>
</resources>