<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".RegisterActivity">

    <ImageView
        android:id="@+id/btnbackdariregistertomenu"
        android:layout_width="22dp"
        android:layout_height="22dp"
        android:src="@drawable/back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:contentDescription="@string/todo" />

    <ImageView
        android:id="@+id/imglogoregister"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="28dp"
        android:src="@drawable/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/DaftarTextView"
        android:layout_width="182dp"
        android:layout_height="54dp"
        android:fontFamily="@font/playpensans"
        android:gravity="center"
        android:text="@string/daftar"
        android:textColor="@color/white"
        android:textSize="38sp"
        android:textStyle="bold"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imglogoregister" />

    <LinearLayout
        android:id="@+id/linearLayoutRegisterPage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="25dp"
        android:paddingRight="25dp"
        app:layout_constraintTop_toBottomOf="@+id/DaftarTextView">
        
        <TextView
            android:id="@+id/masukkannamaregisterTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/playpensans"
            android:text="@string/masukkan_nama"
            android:textColor="@color/white"
            android:textSize="14sp"/>

        <EditText
            android:id="@+id/RegisterNamaEditText"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@drawable/shape_edittext"
            android:fontFamily="@font/playpensans"
            android:hint="@string/nama"
            android:paddingStart="10dp"
            android:textColor="@color/black"
            android:textColorHint="@color/hintedittext"
            android:textSize="12sp"
            tools:ignore="Autofill,RtlSymmetry,TextFields" />
        <TextView
            android:id="@+id/masukkanusernameregisterTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/playpensans"
            android:text="@string/masukkan_username"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:layout_marginTop="5dp"
            />

        <EditText
            android:id="@+id/RegisterUsernameEditText"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@drawable/shape_edittext"
            android:fontFamily="@font/playpensans"
            android:hint="@string/username"
            android:paddingStart="10dp"
            android:textColor="@color/black"
            android:textColorHint="@color/hintedittext"
            android:textSize="12sp"
            tools:ignore="Autofill,RtlSymmetry,TextFields" />

        <TextView
            android:id="@+id/masukkanemailregisterTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/playpensans"
            android:text="@string/masukkan_email"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:layout_marginTop="5dp"
            />

        <EditText
            android:id="@+id/RegisterEmailEditText"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@drawable/shape_edittext"
            android:fontFamily="@font/playpensans"
            android:hint="@string/email"
            android:paddingStart="10dp"
            android:textColor="@color/black"
            android:textColorHint="@color/hintedittext"
            android:textSize="12sp"
            tools:ignore="Autofill,RtlSymmetry,TextFields" />

        <TextView
            android:id="@+id/masukkanpasswordregisterTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/playpensans"
            android:text="@string/masukkan_password"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:layout_marginTop="5dp"
            />

        <EditText
            android:id="@+id/RegisterPasswordEditText"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@drawable/shape_edittext"
            android:fontFamily="@font/playpensans"
            android:hint="@string/password"
            android:paddingStart="10dp"
            android:textColor="@color/black"
            android:textColorHint="@color/hintedittext"
            android:textSize="12sp"
            tools:ignore="Autofill,RtlSymmetry"
            android:inputType="textPassword" />

        <TextView
            android:id="@+id/masukkanpasswordkembaliregisterTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/playpensans"
            android:text="@string/masukkan_kembali_password"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:layout_marginTop="5dp"/>

        <EditText
            android:id="@+id/RegisterPasswordKembaliEditText"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@drawable/shape_edittext"
            android:fontFamily="@font/playpensans"
            android:hint="@string/password"
            android:paddingStart="10dp"
            android:textColor="@color/black"
            android:textColorHint="@color/hintedittext"
            android:textSize="12sp"
            tools:ignore="Autofill,RtlSymmetry"
            android:inputType="textPassword" />

        <TextView
            android:id="@+id/belumpunyaakunTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sudah_punya_akun"
            android:textColor="@color/white"
            android:textSize="13sp"

            android:layout_marginTop="5dp"/>

        <TextView
            android:id="@+id/btntologin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/masuk"
            android:textColor="@color/blue"
            android:textSize="13sp" />

    </LinearLayout>

    <Button
        android:id="@+id/btndaftar"
        android:layout_width="218dp"
        android:layout_height="55dp"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutRegisterPage"
        android:background="@drawable/rounded_button"
        android:text="@string/daftar"
        android:layout_marginTop="5dp"
        android:textColor="@color/white"
        android:fontFamily="@font/playpensans"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:textStyle="bold"
        />

</androidx.constraintlayout.widget.ConstraintLayout>