<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:viewBindingIgnore="true"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/btnbackdarilogintomenu"
        android:layout_width="22dp"
        android:layout_height="22dp"
        android:src="@drawable/back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:contentDescription="@string/todo" />

    <ImageView
        android:id="@+id/imglogoLogin"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="65dp"
        android:src="@drawable/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/MasukTextView"
        android:layout_width="182dp"
        android:layout_height="54dp"
        android:fontFamily="@font/playpensans"
        android:gravity="center"
        android:text="@string/masuk"
        android:textColor="@color/white"
        android:textSize="38sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imglogoLogin"
        tools:ignore="TextSizeCheck" />

    <LinearLayout
        android:id="@+id/linearLayoutLoginPage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="25dp"
        android:paddingRight="25dp"
        android:layout_marginTop="35dp"
        app:layout_constraintTop_toBottomOf="@+id/MasukTextView">

        <TextView
            android:id="@+id/masukkanusernameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/playpensans"
            android:text="@string/masukkan_username"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/LoginUsernameEditText"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@drawable/shape_edittext"
            android:fontFamily="@font/playpensans"
            android:hint="@string/username"
            android:paddingStart="10dp"
            android:textColor="@color/black"
            android:textColorHint="@color/hintedittext"
            android:textSize="12sp"
            tools:ignore="Autofill,RtlSymmetry,TextFields,VisualLintTextFieldSize" />

        <TextView
            android:id="@+id/masukkanpasswordTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:fontFamily="@font/playpensans"
            android:text="@string/masukkan_password"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/LoginPasswordEditText"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@drawable/shape_edittext"
            android:fontFamily="@font/playpensans"
            android:hint="@string/password"
            android:paddingStart="10dp"
            android:textColor="@color/black"
            android:textColorHint="@color/hintedittext"
            android:textSize="12sp"
            tools:ignore="Autofill,RtlSymmetry,VisualLintTextFieldSize"
            android:inputType="textPassword" />

        <TextView
            android:id="@+id/belumpunyaakunTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="@string/belum_punya_akun"
            android:textColor="@color/white"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/btntodaftar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/daftar"
            android:textColor="@color/blue"
            android:textSize="13sp" />

    </LinearLayout>

    <Button
        android:id="@+id/btnmasuk"
        android:layout_width="218dp"
        android:layout_height="55dp"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutLoginPage"
        android:background="@drawable/rounded_button"
        android:text="@string/masuk"
        android:layout_marginTop="35dp"
        android:textColor="@color/white"
        android:fontFamily="@font/playpensans"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:textStyle="bold"
        />

</androidx.constraintlayout.widget.ConstraintLayout>