<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".aboutappFragment">

    <ImageView
        android:id="@+id/btnbackdariaboutapptoprofile"
        android:layout_width="22dp"
        android:layout_height="22dp"
        android:src="@drawable/back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/AboutAppTitleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_app"
        android:textColor="@color/white"
        android:fontFamily="@font/playpensans"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"/>

    <ImageView
        android:id="@+id/imglogoAboutApp"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="65dp"
        android:src="@drawable/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/AboutAppKataKataTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:padding="15dp"
        app:layout_constraintTop_toBottomOf="@id/imglogoAboutApp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:fontFamily="@font/playpensans"
        android:textColor="@color/white"
        android:gravity="center"
        android:textSize="14sp"
        android:text="@string/AboutAppKataKata"
        tools:ignore="VisualLintLongText" />

    <TextView
        android:id="@+id/AboutAppTimPengembahngTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tim_pengembang"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:fontFamily="@font/playpensans"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/AboutAppKataKataTextView"
        android:layout_marginTop="20dp"/>

    <LinearLayout
        android:id="@+id/AboutAppTimPengembahngLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="125dp"
        android:background="@drawable/shape_edittext"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:padding="20dp"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@+id/AboutAppTimPengembahngTextView"
        android:orientation="horizontal">
        
        <LinearLayout
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:gravity="center"
            android:background="@drawable/shape_profile4">

            <ImageView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:src="@drawable/me"
                tools:ignore="ContentDescription,VisualLintBounds" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:orientation="vertical"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mikola_dalifa"
                android:textColor="@color/black"
                android:fontFamily="@font/playpensans"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_21076101"
                android:textColor="@color/black"
                android:fontFamily="@font/playpensans"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pendidikan_teknik_informatika"
                android:textColor="@color/black"
                android:fontFamily="@font/playpensans"/>
        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/AboutAppVersiAplikasiTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/AboutAppTimPengembahngLinearLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        android:text="@string/versi_aplikasi"
        android:textColor="@color/white"
        android:fontFamily="@font/playpensans"/>

    <Button
        android:layout_width="100dp"
        android:layout_height="35dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/rounded_button"
        android:fontFamily="@font/playpensans"
        android:text="@string/v1_0_0"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/AboutAppVersiAplikasiTextView"
        tools:ignore="TextContrastCheck,TouchTargetSizeCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>