<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/black"
    tools:context=".myaccountFragment">

    <ImageView
        android:id="@+id/btnbackdarimyaccounttoprofile"
        android:layout_width="22dp"
        android:layout_height="22dp"
        android:src="@drawable/back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/MyAccountTitleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/my_account"
        android:textColor="@color/white"
        android:fontFamily="@font/playpensans"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"/>
    
    <LinearLayout
        android:id="@+id/MyAccountIconLinearLayout"
        android:layout_width="78dp"
        android:layout_height="78dp"
        android:background="@drawable/shape_profile2"
        app:layout_constraintTop_toBottomOf="@+id/MyAccountTitleTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="25dp"
        android:gravity="center">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/profile"
            android:contentDescription="@string/todo" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/MyAccountIconLinearLayout"
        android:layout_marginTop="25dp">

        <TextView
            android:id="@+id/MyAccountNamaUserTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nama"
            android:textColor="@color/white"
            android:layout_gravity="center"
            android:fontFamily="@font/playpensans"
            android:textSize="16sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/MyAccountUsernameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/playpensans"
            android:text="@string/username"
            android:textColor="@color/abu2"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/MyAccountNamaTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/playpensans"
            android:text="@string/masukkan_nama_baru"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"/>

        <EditText
            android:id="@+id/MyAccountNamaEditText"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@drawable/shape_edittext"
            android:fontFamily="@font/playpensans"
            android:hint="@string/nama"
            android:inputType="text"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:layout_marginBottom="10dp"
            tools:ignore="Autofill,DuplicateSpeakableTextCheck,VisualLintTextFieldSize" />

        <TextView
            android:id="@+id/MyAccountEmailTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/playpensans"
            android:text="@string/masukkan_email_baru"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"/>

        <EditText
            android:id="@+id/MyAccountEmailEditText"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@drawable/shape_edittext"
            android:fontFamily="@font/playpensans"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:layout_marginBottom="25dp"
            tools:ignore="Autofill,DuplicateSpeakableTextCheck,VisualLintTextFieldSize" />

        <Button
            android:id="@+id/MyAccountBtnUpdateButton"
            android:layout_width="150dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:background="@drawable/rounded_button"
            android:text="@string/update"
            android:textStyle="bold"
            android:textColor="@color/white" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>