<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="10dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/black">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="horizontal"
        android:background="@drawable/shape_edittext">

        <LinearLayout
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:gravity="center"
            android:background="@drawable/shape_bgabu">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/laptop"
                android:contentDescription="@string/todo" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginStart="10dp">

            <TextView
                android:id="@+id/HomeNamaInfoLaptopTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/informasi_laptop"
                android:textColor="@color/black"
                android:fontFamily="@font/playpensans"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/HomeDeskripsiInfoLaptopTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/deskripsi_informasi_laptop"
                android:textColor="@color/black"
                android:fontFamily="@font/playpensans"/>

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>