<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/black"
    tools:context=".DetailCareFragment">

    <ImageView
        android:id="@+id/btnbackdaridetailcaretocare"
        android:layout_width="22dp"
        android:layout_height="22dp"
        android:src="@drawable/back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/DetailCareTitleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/informasi_care"
        android:textColor="@color/white"
        android:fontFamily="@font/playpensans"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"/>

    <LinearLayout
        android:id="@+id/DetailCareIconLinearLayout"
        android:layout_width="78dp"
        android:layout_height="78dp"
        android:background="@drawable/shape_profile2"
        app:layout_constraintTop_toBottomOf="@+id/DetailCareTitleTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        android:gravity="center">

        <ImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:src="@drawable/care"
            android:contentDescription="@string/todo" />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:layout_marginTop="20dp"
        android:padding="20dp"
        app:layout_constraintTop_toBottomOf="@+id/DetailCareIconLinearLayout">

        <TextView
            android:id="@+id/DetailDeskripsiCareTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:gravity="fill_horizontal"
            android:text="@string/deskripsi_informasi_care"
            android:fontFamily="@font/playpensans"
            />

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>